--- a/template-2.12/package.json
+++ b/template-2.12/package.json
@@ -28,6 +28,10 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-loader": "^3.0.4",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2"
   }
 }
